# Cytnx

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CITATION.cff  CLAUDE.md  CMakeLists.new  CMakeLists.txt  CMakeLists_bm.txt  CMakePresets.json  CONTRIBUTING.md  CytnxBKNDCMakeLists.cmake  DoxygenLayout.xml  GEMINI.md  Install.sh  LICENSE  MANIFEST.in  MPO.py  Makefile  README.md  RELEASING.md  Readme.md  Readme.md.old  TODO  USER_Make  _config.yml  ainstall.sh  auto_install.py  auto_install_ui.py  clang-formater.sh  codecov.yml  comp_iTEBD.sh  compile.sh  cytnx_Doxyfile.in  dev_test.cpp  (+31 more)
benchmarks/: CMakeLists.txt  Tensor_bm.cpp  UniTensor_bm.cpp  benchmarks_main.cpp  search_tree_bm.cpp
benchmarks/algo/: Hstack_bm.cpp
benchmarks/cross_library/: README.md  conftest.py  plot_results.py  run_all.py  validate_correctness.py
benchmarks/linalg/: Abs_bm.cpp  Arnoldi_bm.cpp  Directsum_bm.cpp  Lanczos_bm.cpp  QR_bm.cpp  Svd_bm.cpp  Svd_truncate_bm.cpp  Trace_bm.cpp  Vectordot_bm.cpp  linalg_basic_bm.cpp
bm_tests/: CMakeLists.txt  OMP_bm.cpp  Tensor_bm.cpp  UniTensor_bm.cpp  bm_test_main.cpp
bm_tests/algo/: Hsplit_bm.cpp  Hstack_bm.cpp  Vsplit_bm.cpp  Vstack_bm.cpp
bm_tests/linalg/: Directsum_bm.cpp  Lanczos_bm.cpp  QR_bm.cpp  Svd_bm.cpp  Svd_truncate_bm.cpp  linalg_basic_bm.cpp
docs/: .gitignore  .gitlab-ci.yml  .python-version  Makefile  README.md  api_doc_script.sh  build_api_docs.py  index.html  justfile  log  pyproject.toml  redirect.py
docs/api_docs/: .gitignore  Makefile
docs/code/: CytnxGuide_PythonCodeExamples_2023_06_30.ipynb  LO1_intro.py  LO2_inher.py  LO3_sparse.py  Lanczos.py  LinOp_PaF.py  Ob_clone.py  Ob_is.py  S1.cyst  St101_astype.py  St101_to.py  St102_fromTn.py  St103_access.py  St1_create.py  St2_append.py  St2_resize.py  St3_io.py  Tn102_astype.py  Tn103_to.py  Tn201_reshape.py  Tn201_reshape_.py  Tn202_contiguous.py  Tn202_permute.py  Tn301_item.py  Tn301_slice.py  Tn302_set.py  Tn401_tadds.py  Tn402_txt.py  Tn5_numpy.py  Tn6_append.py  Tn6_appendT.py  Tn7_io.py  ctm.net
docs/dev/: api-decisions.md  windows.md
docs/html/: Accessor_8cpp.html  Accessor_8cpp__incl.dot  Accessor_8cpp__incl.map  Accessor_8cpp__incl.md5  Accessor_8hpp.html  Accessor_8hpp__dep__incl.dot  Accessor_8hpp__dep__incl.map  Accessor_8hpp__dep__incl.md5  Accessor_8hpp__incl.dot  Accessor_8hpp__incl.map  Accessor_8hpp__incl.md5  Accessor_8hpp_source.html  Add_8cpp.html  Add_8cpp__incl.map  Add_8cpp__incl.md5  BlockUniTensor_8cpp.html  BlockUniTensor_8cpp__incl.map  BlockUniTensor_8cpp__incl.md5  Bond_8cpp.html  Bond_8cpp__incl.dot  Bond_8cpp__incl.map  Bond_8cpp__incl.md5  Bond_8hpp.html  Bond_8hpp__dep__incl.dot  Bond_8hpp__dep__incl.map  Bond_8hpp__dep__incl.md5  Bond_8hpp__incl.dot  Bond_8hpp__incl.map  Bond_8hpp__incl.md5  Bond_8hpp_source.html  BoolStorage_8cpp.html  BoolStorage_8cpp__incl.dot  BoolStorage_8cpp__incl.map  BoolStorage_8cpp__incl.md5  ComplexDoubleStorage_8cpp.html  ComplexDoubleStorage_8cpp__incl.dot  ComplexDoubleStorage_8cpp__incl.map  ComplexDoubleStorage_8cpp__incl.md5  ComplexFloatStorage_8cpp.html  ComplexFloatStorage_8cpp__incl.dot  (+854 more)
docs/latex/: Accessor_8hpp_source.tex  Bond_8hpp_source.tex  DMRG_8hpp_source.tex  Device_8hpp_source.tex  Generator_8hpp_source.tex  Gncon_8hpp_source.tex  LinOp_8hpp_source.tex  MPO_8hpp_source.tex  MPS_8hpp_source.tex  Network_8hpp_source.tex  Network__misc_8hpp_source.tex  Physics_8hpp_source.tex  Scalar_8hpp_source.tex  Storage_8hpp_source.tex  Symmetry_8hpp_source.tex  Tensor_2Init_8cpp-example.tex  Tensor_2Init_8py-example.tex  Tensor_8hpp_source.tex  Type_8hpp_source.tex  UniTensor_8hpp_source.tex  algo_8hpp_source.tex  annotated.tex  classcytnx_1_1Accessor.tex  classcytnx_1_1Bond.tex  classcytnx_1_1Device__class.tex  classcytnx_1_1Gncon.tex  classcytnx_1_1LinOp.tex  classcytnx_1_1Network.tex  classcytnx_1_1Qs.tex  classcytnx_1_1Scalar.tex  classcytnx_1_1Storage.tex  classcytnx_1_1Symmetry.tex  classcytnx_1_1SymmetryType__class.tex  classcytnx_1_1Tensor.tex  classcytnx_1_1Type__class.tex  classcytnx_1_1UniTensor.tex  classcytnx_1_1UniTensor__impl.tex  classcytnx_1_1UniTensor__impl.tex.tmp  classcytnx_1_1UniTensor__impl__coll__graph.dot  classcytnx_1_1UniTensor__impl__coll__graph.md5  (+29 more)
docs/material/: .~material.pptx  material.odp  material.pptx
docs/site_root/: index.html  versions.json
docs/source/: .conf.py.swp  .python-version  CommApp.rst  Developer.rst  Examples.rst  FAQ.rst  (+11 more)
src/: .BlockUniTensor.cpp.swp  .Bond.cpp.swp  .ComplexDoubleStorage.cpp.swp  .DenseUniTensor.cpp.swp  .DoubleStorage.cpp.swp  .RegularNetwork.cpp.swp  .SparseCyTensor.cpp.swo  .SparseUniTensor.cpp.swo  .SparseUniTensor.cpp.swp  .Storage.cpp.swp  .Storage_base.cpp.swp  .Tensor.cpp.swp  .Type.cpp.swp  .UniTensor.cpp.swp  Accessor.cpp  AnyonUniTensor.cpp  BlockFermionicUniTensor.cpp  BlockUniTensor.cpp  BlockUniTensor.cpp.old  Bond.cpp  BoolStorage.cpp  CMakeLists.txt  ComplexDoubleStorage.cpp  ComplexFloatStorage.cpp  CyTensor.cpp  CyTensor_base.cpp  DenseCyTensor.cpp  DenseUniTensor.cpp  Device.cpp  Device_gpu.cu  DoubleStorage.cpp  FermionNetwork.cpp  FloatStorage.cpp  Generator.cpp  Gncon.cpp  Gncon_base.cpp  Int16Storage.cpp  Int32Storage.cpp  Int64Storage.cpp  LinOp.cpp  (+31 more)
tests/: .test.py.swp  Accessor_test.cpp  Accessor_test.h  BUconjT.cytnx  BUtrT.cytnx  BlockFermionicUniTensor_test.cpp  BlockFermionicUniTensor_test.h  BlockUniTensor_test.cpp  BlockUniTensor_test.h  Bond_test.cpp  Bond_test.h  CMakeLists.txt  Contract_test.cpp  Contract_test.h  Contracts_test.cpp  Contracts_test.h  DenseUniTensor_test.cpp  DenseUniTensor_test.h  DenseUniTensor_test_20240204.cpp  Network_test.cpp  Network_test.h  OLDtest.cpp  OriginalBUT.cytnx  README.md  Scalar_test.cpp  Storage_test.cpp  Storage_test.h  Symmetry_test.cpp  TensorT_test.cpp  Tensor_strides_test.cpp  Tensor_test.cpp  Tensor_test.h  Tensor_test_2.cpp  Type_test.cpp  UniTensor_base_test.cpp  UniTensor_base_test.h  arange_test.cpp  common_data_generator.cpp  contract_L3.cytnx  contract_ans1.cytnx  (+21 more)
(+3633 files in other folders)
